[package]
name = "gaia_demo"
version = "0.1.0"
authors = ["Ulysse Carion <ulyssecarion@gmail.com>"]

[dependencies]
cgmath = "0.15"
error-chain = "0.10"
fps_counter = "0.2"
gfx = "0.17"
hsl = "0.1"
gaia = "0.2"
gaia_assetgen = "0.3.1"
piston = "0.36"
piston_window = "0.77"

[build-dependencies]
gaia_assetgen = "0.3.1"
